Added Main entry point

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
       "start": "node index"
     },
+    "main": "src/index",
     "source": "src/index",
     "files": [
     "src"
